--- a/navbar.html
+++ b/navbar.html
@@ -32,13 +32,13 @@
             <a class="nav-link" aria-current="page" href="../index.html" data-bs-toggle="tooltip"
               title="Click para volver al Home">Home</a>
           </li>
-          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a San Miguel de Tucumán">
             <a class="nav-link" href="../card1/card1.html">San Miguel de Tucumán</a>
           </li>
-          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a qué hacer?">
             <a class="nav-link" href="../card2/card2.html">Qué hacer?</a>
           </li>
-          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a Gastronomia">
             <a class="nav-link" href="../card3/card3.html">Gastronomia</a>
           </li>
           <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Tienda">
