--- a/store/store.html
+++ b/store/store.html
@@ -22,28 +22,29 @@
 <body>
   <div id="navbar-placeholder"></div>
   <div class="container">
-    <!-- Botón de WhatsApp -->
-    <a href="https://wa.me/5493812133639" target="_blank" class="whatsapp-button" data-bs-toggle="tooltip"
-      title="Ir a WhatsApp">
-      <i class="bi bi-whatsapp"></i>
-    </a>
+    
+    
   </div>
+  <!-- Botón de WhatsApp -->
+  <div id="whatsapp-placeholder"></div>
+
+  <!-- Footer -->
   <footer class="bg-dark text-white text-center py-4">
     <div>
       <ul class="list-inline">
         <li class="list-inline-item" data-bs-toggle="tooltip" title="Ir a Instagram">
           <a href="https://www.instagram.com/tucumanturismo" class="text-white me-3" target="_blank">
-            <i class="bi bi-instagram"></i>
+            <i class="bi bi-instagram fs-2"></i>
           </a>
         </li>
         <li class="list-inline-item" data-bs-toggle="tooltip" title="Ir a Facebook">
           <a href="https://www.facebook.com/tucumanturismo" class="text-white me-3" target="_blank">
-            <i class="bi bi-facebook"></i>
+            <i class="bi bi-facebook fs-2"></i>
           </a>
         </li>
         <li class="list-inline-item" data-bs-toggle="tooltip" title="Enviar email">
           <a href="mailto:informes@tucumanturismo.gob.ar" class="text-white me-3">
-            <i class="bi bi-envelope"></i>
+            <i class="bi bi-envelope fs-2"></i>
           </a>
         </li>
       </ul>
