--- a/contact/contact.html
+++ b/contact/contact.html
@@ -57,22 +57,23 @@
   <!-- Botón de WhatsApp -->
   <div id="whatsapp-placeholder"></div>
 
+  <!-- Footer -->
   <footer class="bg-dark text-white text-center py-4">
     <div>
       <ul class="list-inline">
         <li class="list-inline-item" data-bs-toggle="tooltip" title="Ir a Instagram">
           <a href="https://www.instagram.com/tucumanturismo" class="text-white me-3" target="_blank">
-            <i class="bi bi-instagram"></i>
+            <i class="bi bi-instagram fs-2"></i>
           </a>
         </li>
         <li class="list-inline-item" data-bs-toggle="tooltip" title="Ir a Facebook">
           <a href="https://www.facebook.com/tucumanturismo" class="text-white me-3" target="_blank">
-            <i class="bi bi-facebook"></i>
+            <i class="bi bi-facebook fs-2"></i>
           </a>
         </li>
         <li class="list-inline-item" data-bs-toggle="tooltip" title="Enviar email">
           <a href="mailto:informes@tucumanturismo.gob.ar" class="text-white me-3">
-            <i class="bi bi-envelope"></i>
+            <i class="bi bi-envelope fs-2"></i>
           </a>
         </li>
       </ul>
@@ -81,7 +82,7 @@
       </p>
     </div>
   </footer>
-  
+
   <script src="../index.js"></script>
 </body>
 
